# Korselt

./: .gitignore  CMakeLists.txt  Korselt.sln  README.md  korselt.cpp  korselt.h  main.cpp
Debug/: Korselt.ilk
Korselt/: Korselt.vcxproj  Source.cpp  output.txt
Korselt/Debug/: vc140.idb
Korselt/Debug/Korselt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Korselt.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
korselt/: CMakeLists.txt  korselt.h
tests/: CMakeLists.txt  korselt.txt  tests.cpp
